--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700" rel="stylesheet" />
-    <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
 
-    <link rel="stylesheet" href="src/sass/main.scss" />
-    <script defer src="src/js/controller.js"></script>
+    <link rel="stylesheet" href="sass/main.scss" />
+    <script defer src="js/controller.js"></script>
 
     <title>forkify // Search over 1,000,000 recipes</title>
 </head>
@@ -17,12 +17,12 @@
 <body>
     <div class="container">
         <header class="header">
-            <img src="src/img/logo.png" alt="Logo" class="header__logo" />
+            <img src="img/logo.png" alt="Logo" class="header__logo" />
             <form class="search">
                 <input type="text" class="search__field" placeholder="Search over 1,000,000 recipes..." />
                 <button class="btn search__btn">
                     <svg class="search__icon">
-                        <use href="src/img/icons.svg#icon-search"></use>
+                        <use href="img/icons.svg#icon-search"></use>
                     </svg>
                     <span>Search</span>
                 </button>
@@ -33,7 +33,7 @@
                     <li class="nav__item">
                         <button class="nav__btn nav__btn--add-recipe">
                             <svg class="nav__icon">
-                                <use href="src/img/icons.svg#icon-edit"></use>
+                                <use href="img/icons.svg#icon-edit"></use>
                             </svg>
                             <span>Add recipe</span>
                         </button>
@@ -41,7 +41,7 @@
                     <li class="nav__item">
                         <button class="nav__btn nav__btn--bookmarks">
                             <svg class="nav__icon">
-                                <use href="src/img/icons.svg#icon-bookmark"></use>
+                                <use href="img/icons.svg#icon-bookmark"></use>
                             </svg>
                             <span>Bookmarks</span>
                         </button>
@@ -50,7 +50,7 @@
                                 <div class="message">
                                     <div>
                                         <svg>
-                                            <use href="src/img/icons.svg#icon-smile"></use>
+                                            <use href="img/icons.svg#icon-smile"></use>
                                         </svg>
                                     </div>
                                     <p>
@@ -61,7 +61,7 @@
                                 <!-- <li class="preview">
                     <a class="preview__link" href="#23456">
                       <figure class="preview__fig">
-                        <img src="src/img/test-1.jpg" alt="Test" />
+                        <img src="img/test-1.jpg" alt="Test" />
                       </figure>
                       <div class="preview__data">
                         <h4 class="preview__name">
@@ -84,14 +84,14 @@
           <li class="preview">
             <a class="preview__link preview__link--active" href="#23456">
               <figure class="preview__fig">
-                <img src="src/img/test-1.jpg" alt="Test" />
+                <img src="img/test-1.jpg" alt="Test" />
               </figure>
               <div class="preview__data">
                 <h4 class="preview__title">Pasta with Tomato Cream ...</h4>
                 <p class="preview__publisher">The Pioneer Woman</p>
                 <div class="preview__user-generated">
                   <svg>
-                    <use href="src/img/icons.svg#icon-user"></use>
+                    <use href="img/icons.svg#icon-user"></use>
                   </svg>
                 </div>
               </div>
@@ -103,14 +103,14 @@
             <div class="pagination">
                 <!-- <button class="btn--inline pagination__btn--prev">
             <svg class="search__icon">
-              <use href="src/img/icons.svg#icon-arrow-left"></use>
+              <use href="img/icons.svg#icon-arrow-left"></use>
             </svg>
             <span>Page 1</span>
           </button>
           <button class="btn--inline pagination__btn--next">
             <span>Page 3</span>
             <svg class="search__icon">
-              <use href="src/img/icons.svg#icon-arrow-right"></use>
+              <use href="img/icons.svg#icon-arrow-right"></use>
             </svg>
           </button> -->
             </div>
@@ -120,7 +120,7 @@
                 <div class="message">
                     <div>
                         <svg>
-                            <use href="src/img/icons.svg#icon-smile"></use>
+                            <use href="img/icons.svg#icon-smile"></use>
                         </svg>
                     </div>
                     <p>Start by searching for a recipe or an ingredient. Have fun!</p>
@@ -128,14 +128,14 @@
 
                 <!-- <div class="spinner">
           <svg>
-            <use href="src/img/icons.svg#icon-loader"></use>
+            <use href="img/icons.svg#icon-loader"></use>
           </svg>
         </div> -->
 
                 <!-- <div class="error">
             <div>
               <svg>
-                <use href="src/img/icons.svg#icon-alert-triangle"></use>
+                <use href="img/icons.svg#icon-alert-triangle"></use>
               </svg>
             </div>
             <p>No recipes found for your query. Please try again!</p>
@@ -143,7 +143,7 @@
 
                 <!--
         <figure class="recipe__fig">
-          <img src="src/img/test-1.jpg" alt="Tomato" class="recipe__img" />
+          <img src="img/test-1.jpg" alt="Tomato" class="recipe__img" />
           <h1 class="recipe__title">
             <span>Pasta with tomato cream sauce</span>
           </h1>
@@ -152,14 +152,14 @@
         <div class="recipe__details">
           <div class="recipe__info">
             <svg class="recipe__info-icon">
-              <use href="src/img/icons.svg#icon-clock"></use>
+              <use href="img/icons.svg#icon-clock"></use>
             </svg>
             <span class="recipe__info-data recipe__info-data--minutes">45</span>
             <span class="recipe__info-text">minutes</span>
           </div>
           <div class="recipe__info">
             <svg class="recipe__info-icon">
-              <use href="src/img/icons.svg#icon-users"></use>
+              <use href="img/icons.svg#icon-users"></use>
             </svg>
             <span class="recipe__info-data recipe__info-data--people">4</span>
             <span class="recipe__info-text">servings</span>
@@ -167,12 +167,12 @@
             <div class="recipe__info-buttons">
               <button class="btn--tiny btn--increase-servings">
                 <svg>
-                  <use href="src/img/icons.svg#icon-minus-circle"></use>
+                  <use href="img/icons.svg#icon-minus-circle"></use>
                 </svg>
               </button>
               <button class="btn--tiny btn--increase-servings">
                 <svg>
-                  <use href="src/img/icons.svg#icon-plus-circle"></use>
+                  <use href="img/icons.svg#icon-plus-circle"></use>
                 </svg>
               </button>
             </div>
@@ -180,12 +180,12 @@
 
           <div class="recipe__user-generated">
             <svg>
-              <use href="src/img/icons.svg#icon-user"></use>
+              <use href="img/icons.svg#icon-user"></use>
             </svg>
           </div>
           <button class="btn--round">
             <svg class="">
-              <use href="src/img/icons.svg#icon-bookmark-fill"></use>
+              <use href="img/icons.svg#icon-bookmark-fill"></use>
             </svg>
           </button>
         </div>
@@ -195,7 +195,7 @@
           <ul class="recipe__ingredient-list">
             <li class="recipe__ingredient">
               <svg class="recipe__icon">
-                <use href="src/img/icons.svg#icon-check"></use>
+                <use href="img/icons.svg#icon-check"></use>
               </svg>
               <div class="recipe__quantity">1000</div>
               <div class="recipe__description">
@@ -206,7 +206,7 @@
 
             <li class="recipe__ingredient">
               <svg class="recipe__icon">
-                <use href="src/img/icons.svg#icon-check"></use>
+                <use href="img/icons.svg#icon-check"></use>
               </svg>
               <div class="recipe__quantity">0.5</div>
               <div class="recipe__description">
@@ -231,7 +231,7 @@
           >
             <span>Directions</span>
             <svg class="search__icon">
-              <use href="src/img/icons.svg#icon-arrow-right"></use>
+              <use href="img/icons.svg#icon-arrow-right"></use>
             </svg>
           </a>
         </div>
@@ -280,7 +280,7 @@
 
                 <button class="btn upload__btn">
                     <svg>
-                        <use href="src/img/icons.svg#icon-upload-cloud"></use>
+                        <use href="img/icons.svg#icon-upload-cloud"></use>
                     </svg>
                     <span>Upload</span>
                 </button>
